Drivers don't update values in UI or show proper errors #59984

Closed
opened 2018-12-30 14:10:45 +01:00 by Charles Wardlaw · 4 comments

{F6117294}System Information
Operating system: MacOS 10.13.6
Graphics card: AMD Radeon R9 M370X

Blender Version
Broken: 2.80, 266b1e2cdb, 2018-12-29
Worked: 2.79

Short description of error
No driver variables seem to show their values while editing, even after hitting the update button. Driver final value does not show a value either. If the expression is invalid there is no indication of an error; it just says, "slow python expression" even if Python would not evaluate the code.

As an aside, changing the expression outputs for rotation channels to degrees should also be considered a bug. Please change back to radians! :)

Exact steps for others to reproduce the error
Attached a .blend. In Armature BodyArm, there is a driver on the z-axis rotation for bone calf.L.

On mch.leg.L there are custom properties. If you change tester the expression seems to work but none of the values change.

If you change the expression to something absurd like "bunnies", there is no error printed at all.

{[F6117294](https://archive.blender.org/developer/F6117294/31dec2018_limb_drivers.blend)}**System Information** Operating system: MacOS 10.13.6 Graphics card: AMD Radeon R9 M370X **Blender Version** Broken: 2.80, 266b1e2cdbc1, 2018-12-29 Worked: 2.79 **Short description of error** No driver variables seem to show their values while editing, even after hitting the update button. Driver final value does not show a value either. If the expression is invalid there is no indication of an error; it just says, "slow python expression" even if Python would not evaluate the code. As an aside, changing the expression outputs for rotation channels to degrees should also be considered a bug. Please change back to radians! :) **Exact steps for others to reproduce the error** Attached a .blend. In Armature BodyArm, there is a driver on the z-axis rotation for bone calf.L. On mch.leg.L there are custom properties. If you change tester the expression seems to work but none of the values change. If you change the expression to something absurd like "bunnies", there is no error printed at all.
Author
Member

Added subscriber: @CharlesWardlaw

Added subscriber: @CharlesWardlaw

Added subscriber: @gavinjoyce

Added subscriber: @gavinjoyce
Joshua Leung was assigned by Sebastian Parborg 2018-12-31 14:36:54 +01:00

This issue was referenced by 9d4ed6d03b

This issue was referenced by 9d4ed6d03b6910b5239c2f17b3559987330f9652
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59984
No description provided.